--- a/Restaurant/Styles/restaurantStyles.css
+++ b/Restaurant/Styles/restaurantStyles.css
@@ -10,15 +10,15 @@ body {
 	max-width: 900px;
 	margin: 0 auto;
 }
-header,footer {
-	background-color: black;
-	color: gold;
-	height: 100px;
-	text-align: center;
-	padding: 30px 10px 20px 10px;
-}
 h1 {
 	font-size: 3.0em;
+}
+.nav-link {
+	font-size: 1.1em !important;
+	text-align: center;
+	float: none;
+	display:inline-block;
+	color: red;
 }
 nav a:hover {
 	font-weight: bold;
@@ -28,4 +28,72 @@ nav a:active {
 }
 nav a:visited {
 	color: darkblue;
+}
+.carousel-inner img {
+	width:100%;
+	height: 100%;
+}
+.carousel-caption {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.carousel-caption h1 {
+	font-size: 500%;
+	text-transform: uppercase;
+	text-shadow: 1px 1px 15px #000;
+}
+.carousel-caption h3 {
+	font-size: 200%;
+	font-weight: 500%;
+	text-shadow: 1px 1px 10px #000;
+}
+.jumbotron {
+	padding: 1 rem;
+	border-radius: 1rem;
+}
+.padding {
+	padding-bottom: 2rem;
+}
+
+.mainImage {
+	padding: 10px 15px;
+}
+
+
+/*Media Queries--*/
+@media (max-width: 992px) {
+}
+@media (max-width:768px) {
+	.carousel-caption {
+	top: 45%;
+}
+.carousel-caption h1 {
+	font-size: 350%;
+}
+.carousel-caption h3 {
+	font-size: 140%;
+	font-weight: 400%;
+	padding-bottom: .2rem;
+}
+.display-2 {
+	font-size: 200%;
+}
+@media (max-width:768px) {
+.carousel-caption {
+	top: 40%;
+}
+.carousel-caption h1 {
+	font-size: 250%;
+}
+.carousel-caption h3 {
+	font-size: 110%;
+}
+.carousel-indicators {
+	display: none;
+}
+
+
+.span {
+	vertical-align: middle;
 }
